feat: add job description information to application
