# docs/api/openapi3.yaml
@@ -97,6 +97,33 @@ paths:
                   value: "{\"applications\":{\"content\":[{\"id\":1,\"company\":{\"\
                     id\":1,\"name\":\"Company\"}}],\"hasNext\":true,\"hasPrevious\"\
                     :false}}"
+  /applications/{applicationId}:
+    get:
+      tags:
+      - applications
+      summary: Get Job Application
+      description: Get Job Application by ID
+      operationId: GetJobApplication
+      parameters:
+      - name: applicationId
+        in: path
+        description: ""
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: "200"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetJobApplicationResponse"
+              examples:
+                GetJobApplication:
+                  value: "{\"id\":1,\"status\":\"APPLIED\",\"company\":{\"id\":1,\"\
+                    name\":\"Company\"},\"jobDescription\":{\"title\":\"Job Title\"\
+                    ,\"description\":\"Job Description\",\"location\":\"Location\"\
+                    },\"notes\":\"Notes\"}"
   /auth/login:
     post:
       tags:
@@ -1077,6 +1104,19 @@ components:
         isOnboarded:
           type: boolean
           description: Is Onboarded
+    RegisterRequest:
+      title: RegisterRequest
+      required:
+      - email
+      - password
+      type: object
+      properties:
+        password:
+          type: string
+          description: Password
+        email:
+          type: string
+          description: Email
     UploadMediaRequest:
       title: UploadMediaRequest
       required:
@@ -1098,19 +1138,6 @@ components:
         mediaType:
           type: string
           description: Media Type
-    RegisterRequest:
-      title: RegisterRequest
-      required:
-      - email
-      - password
-      type: object
-      properties:
-        password:
-          type: string
-          description: Password
-        email:
-          type: string
-          description: Email
     CreateJobPostingRequest:
       title: CreateJobPostingRequest
       required:
@@ -1200,6 +1227,55 @@ components:
                   content:
                     type: string
                     description: Reflection Content
+    GetJobApplicationResponse:
+      title: GetJobApplicationResponse
+      required:
+      - company
+      - id
+      - jobDescription
+      - status
+      type: object
+      properties:
+        notes:
+          type: string
+          description: Additional Notes
+          nullable: true
+        jobDescription:
+          required:
+          - description
+          - location
+          - title
+          type: object
+          properties:
+            description:
+              type: string
+              description: Job Description
+            location:
+              type: string
+              description: Job Location
+            title:
+              type: string
+              description: Job Title
+          description: Job Description Information
+        company:
+          required:
+          - id
+          - name
+          type: object
+          properties:
+            name:
+              type: string
+              description: Company Name
+            id:
+              type: number
+              description: Company ID
+          description: Company Information
+        id:
+          type: number
+          description: Application ID
+        status:
+          type: string
+          description: Application Status
     CreateJobApplicationResponse:
       title: CreateJobApplicationResponse
       required:
